--- a/META.yml
+++ b/META.yml
@@ -2,9 +2,11 @@
 abstract: 'Wrapping mod_perl2 applications in Plack'
 author:
   - 'Peter Makholm, L<peter@makholm.net>'
+build_requires: {}
 configure_requires:
-  Module::Build: 0.36
-generated_by: 'Module::Build version 0.3607'
+  Module::Build: 0.38
+dynamic_config: 1
+generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120921'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -13,16 +15,21 @@ name: Plack-App-FakeApache
 provides:
   Plack::App::FakeApache:
     file: lib/Plack/App/FakeApache.pm
-    version: 0.02
+    version: 0.03
   Plack::App::FakeApache::Request:
     file: lib/Plack/App/FakeApache/Request.pm
+    version: 0
+  Plack::App::FakeApache::Tie:
+    file: lib/Plack/App/FakeApache.pm
+    version: 0
   Plack::App::WrapApacheReq:
     file: lib/Plack/App/WrapApacheReq.pm
     version: 0
 requires:
   APR::Pool: 0
   APR::Table: 0
+  Moose: 0
   Plack: 0
 resources:
   repository: http://github.com/pmakholm/plack-app-wrapapachereq/tree/master
-version: 0.02
+version: 0.03
