--- a/META.yml
+++ b/META.yml
@@ -4,9 +4,9 @@ author:
   - 'Peter Makholm, L<peter@makholm.net>'
 build_requires: {}
 configure_requires:
-  Module::Build: 0.38
+  Module::Build: 0.42
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.120921'
+generated_by: 'Module::Build version 0.4203, CPAN::Meta::Converter version 2.133380'
 license: unknown
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -15,21 +15,23 @@ name: Plack-App-FakeApache
 provides:
   Plack::App::FakeApache:
     file: lib/Plack/App/FakeApache.pm
-    version: 0.03
+    version: 0.04
+  Plack::App::FakeApache::Connection:
+    file: lib/Plack/App/FakeApache/Connection.pm
+  Plack::App::FakeApache::Log:
+    file: lib/Plack/App/FakeApache/Log.pm
   Plack::App::FakeApache::Request:
     file: lib/Plack/App/FakeApache/Request.pm
-    version: 0
+  Plack::App::FakeApache::Server:
+    file: lib/Plack/App/FakeApache/Server.pm
   Plack::App::FakeApache::Tie:
     file: lib/Plack/App/FakeApache.pm
-    version: 0
   Plack::App::WrapApacheReq:
     file: lib/Plack/App/WrapApacheReq.pm
-    version: 0
 requires:
   APR::Pool: 0
   APR::Table: 0
-  Moose: 0
   Plack: 0
 resources:
   repository: http://github.com/pmakholm/plack-app-wrapapachereq/tree/master
-version: 0.03
+version: 0.04
