Import of ZARQUON/Plack-App-FakeApache-0.05.tar.gz from CPAN.
gitpan-cpan-distribution: Plack-App-FakeApache
gitpan-cpan-version:      0.05
gitpan-cpan-path:         ZARQUON/Plack-App-FakeApache-0.05.tar.gz
gitpan-cpan-author:       ZARQUON
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -15,7 +15,7 @@ name: Plack-App-FakeApache
 provides:
   Plack::App::FakeApache:
     file: lib/Plack/App/FakeApache.pm
-    version: 0.04
+    version: 0.05
   Plack::App::FakeApache::Connection:
     file: lib/Plack/App/FakeApache/Connection.pm
   Plack::App::FakeApache::Log:
@@ -31,7 +31,8 @@ provides:
 requires:
   APR::Pool: 0
   APR::Table: 0
+  CGI::Emulate::PSGI: 0
   Plack: 0
 resources:
   repository: http://github.com/pmakholm/plack-app-wrapapachereq/tree/master
-version: 0.04
+version: 0.05
